Configure las rutas

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <h1>App WebSocket</h1>
+
+
+    <form action="">
+
+        <input type="text" placeholder="Nombre" name="nombre" id="nm">
+        <input type="text" placeholder="Mensaje" name="Mensaje" id="msn">
+        <input type="submit" value="Enviar">
+    </form>
+    <div id="caja"></div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./index.js"></script>
 </body>
