se configuro chat

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <h1>App WebSocket</h1>
 
 
-    <form action="">
+    <form onsubmit="return addInfo()">
 
         <input type="text" placeholder="Nombre" name="nombre" id="nm">
         <input type="text" placeholder="Mensaje" name="Mensaje" id="msn">
